# master_thesis

./: .gitignore  CMakeLists.txt  README.md  blas.c  blas.h  compile_native_metal.sh  dbml.c  hash.c  karpathy.py  kernels.metal  log_test.c  master_thesis.tex  metal.m  metal_common.h  metal_test.m  minigrad.c  minigrad_GPU.m  minigrad_kernels.metal  no_recursion.c  numerical_diff.py  pytorch.cpp  pytorch.py  sizes.c  test.m  testerino.m
metalc/: compile_native_metal.sh  simple.metal  test.mtlp-json  traceme.m
thesis_and_article/: .latexmkrc  article.tex  beamerthemesapienza.sty  bibliography-article.bib  bibliography.bib  build.bat  common.tex  figures.mp  metagraph.mp  slides.tex  thesis.tex
